ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
